--- a/entrega.html/entrega.html
+++ b/entrega.html/entrega.html
@@ -28,21 +28,22 @@
 
 
     <!-- Page Content -->
-    <div class="container">
-
-        <div class="row">
-            <div class="col-lg-12 text-center" style="margin-top:100px">
-                <h2 class="lead">Entrega - Belluccia II</h2>
-                <h1>M. Sol Rodriguez Duarte</h1>
-                <p style="margin-top:50px">
-                    <a class="btn btn-primary btn-lg" href="https://solana-rodriguez.github.io/preentrega-agilitypeak5/">Sitio desarrollado</a> 
-                    <a class="btn btn-default btn-lg" href="https://builder.bootstrapmade.com/demo/Techie/">Template utilizado</a>
-                </p>
-            </div>
-        </div>
-        <!-- /.row -->
-
+  <!-- Page Content -->
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 text-center" style="margin-top:100px">
+      <h2 class="lead">Entrega - Belluccia II</h2>
+      <h1>M. Sol Rodriguez Duarte</h1>
+      <p style="margin-top:50px">
+        <a class="btn btn-primary btn-lg" href="https://solana-rodriguez.github.io/preentrega-agilitypeak5/">Sitio desarrollado</a>
+        <a class="btn btn-default btn-lg" href="https://builder.bootstrapmade.com/demo/Techie/">Template utilizado</a>
+      </p>
     </div>
+  </div>
+</div>
+
+        <!-- /.row -->
+    
     <!-- /.container -->
 
     <!-- jQuery Version 1.11.1 -->
